frontend/src/components/ChatWindow/ChatWindow.css
.chat-container {
  border: 1px solid #000;
  display: flex;
  height: 100%;
  flex-direction: column;
  margin: 0 0 20px 0;
  min-height: 0;
}

.message-list {
  overflow-y: scroll;
  min-height: 0;
  flex: 1;
  list-style-type: none;
  padding-left: 1em;
}

.message-input {
  padding: 6px 1em 6px 1em;
  border: none;
  border-top: 1px solid #000;
  font-size: 14px;
}

.chat-form {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  width: 100%;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

